Fix overflow in App styles

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .star-wrapper {
